tests/k8s_testcases/example_policies/demo/regression/regression-podSelector-old.yaml
### This "old" policy defines traffic within the namespace kube-system, restricting incoming traffic from specific pods without limiting the ports

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-no-ports-restriction
  namespace: kube-system 
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress: 
    - from:
      - podSelector: 
          matchExpressions:
            - key: app
              operator: NotIn
              values:
                - file-plugin
                - keepalived-watcher
            - key: app
              operator: Exists
