tests/k8s_testcases/example_policies/demo/regression/regression-withIpBlock-new.yaml
# The "new" policy
# adds a port to the ipBlocks of the old one, and adds to the egress few ipBlocks on all ports

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: enable-from-kube-system-tier-frontend-to-ipblocks-new-more-enabled
  namespace: kube-system
spec:
  podSelector:
    matchLabels:
      tier: frontend
  policyTypes:
    - Egress
  egress: 
    - to:
      - ipBlock:
          cidr: 128.0.0.0/2     # first half 
          except:
            - 172.21.0.0/16     # Kube Service CIDR Range
            - 172.30.0.0/16     # Kube Cluster CIDR Range
      ports:
        - port: 53
        - port: 54
        - port: 55 
    - to:         
      - ipBlock:
          cidr: 0.1.1.0/10
